test/trivial/vass/val-as-type-error-message.good
val-as-type-error-message.chpl:2: error: type specification cannot be a value
