test/trivial/vass/val-as-type-error-message.chpl
proc spooftype() { return 1; }
var x: spooftype();
